# Backend-Student-Motivation-App

./: .env  .gitignore  Pipfile  app.py  config.py  firebase-service-account.json  mail.utils.py  models.py  pyproject.toml  requirements.txt
instance/: motivation.db
migrations/: alembic.ini
migrations/versions/: 00553acf8255_recreating_migrations.py  0164dafcfac2_initial_migration_with_content_type_and_.py  0f79fc58f357_initial_migration.py  2f9da7f39d7e_.py  3a085359292c_initial_migration.py  5946bf9798ca_.py  8b0acae20f44_initial_migration.py  9025bcfbe984_initial_migration.py  bf118a1f42e8_initial_migration.py
scripts/: hash_existing_passwords.py
tests/: conftest.py  test_auth.py  test_content.py  test_post.py
tests/instance/: :motivation:
views/: admin.py  auth.py  category.py  comment.py  content.py  notification.py  post.py  preference.py  profile.py  share.py  student.py  subscription.py  wishlist.py
