[tool.poetry]
name = "Student Motivation Backend"
version = "0.1.0"
description = ""
authors = ["cutie-sudo <faith.nguli@student.moringaschool.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
